--- a/index.html
+++ b/index.html
@@ -23,5 +23,18 @@
         <img src="img/my-pic-1.png" alt="mohammad anamul">
     </div>
    </section>
+
+   <section id="dream-big">
+    <div class="first-img img">
+        <img src="img/my-pic-2.png" alt="my image">
+    </div>
+    <div class="about-me">
+        <h1><span class="tird-color">Dream</span> Big</h1>
+        <h3>I want to be a web developer</h3>
+        <p>I already learned the basic <strong>HTML and CSS.</strong> I can build any simple website. I can even teach my grandma how to make simple website. My goal is to build 3 websites and learn advanced topics.</p>
+        <p>I will make a clean, unique, and professional-looking WordPress website. My design must be responsive in all devices, pixel perfect, w3c valid code, clean coding and seo friendly. I’ve helped so many organizations improve their online presence and hope I can help you to make an awesome WordPress website for your business.</p>
+        <a class="button-link" target="_blank" href="">downloard resume</a>
+    </div>
+   </section>
 </body>
 </html>
