--- a/index.html
+++ b/index.html
@@ -36,5 +36,24 @@
         <a class="button-link" target="_blank" href="">downloard resume</a>
     </div>
    </section>
+
+   <section id="Experiences">
+        <h1 class="centerh1">Experiences</h1>
+       <div class="flexible-content">
+            <div class="boxshadw tomato">
+                <h1>Full Stack Web <span class="second-color">Developer</span></h1>
+                <h3 class="name-color">2024-Present | Pro Level Developer</h3>
+                <p>I am the master of HTML, CSS and Javascript. I know everything needed to make a website function, efficient. I didn't stop with the web. I went beyond with most popular Javascript framework called Vue JS. I even know the deployment, server and security. I will give you 100% web solution.</p>
+            </div>
+            <div class="boxshadw blue">
+                <h1>Baby Web <span class="second-color">Developer</span></h1>
+                <h3 class="name-color">2022-2024 | Programming Hero Learner</h3>
+                <p>They didn't offer me a job. But I made myself as a remove web developer. I made their website and showed it to them. They liked it. And uploaded the content. It was fun working at Programming Hero.</p>        
+            </div>
+       </div>
+   </section>
 </body>
+<footer>
+    <p>© Peter Parker 2023, a Programming Hero initiative.</p>
+</footer>
 </html>
