--- a/index.html
+++ b/index.html
@@ -54,6 +54,6 @@
    </section>
 </body>
 <footer>
-    <p>© Peter Parker 2023, a Programming Hero initiative.</p>
+    <p>© Mohammad Anamul 2022, a Programming Hero initiative.</p>
 </footer>
 </html>
