--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,300;0,400;1,200&display=swap" rel="stylesheet">
+    <link rel="shortcut icon" href="img/my-pic-1.png" type="image/x-icon">
     <link rel="stylesheet" href="style.css">
     <title>Developer Portfolio Anamul </title>
 </head>
